--- a/index.html
+++ b/index.html
@@ -67,21 +67,24 @@
             <div class="col-12 col-sm-6">
                 <figure class="shadow bg-black">
                     <img loading="lazy" src="img/fig-1.png" class="w-100" alt="describe lo que se ve en la imagen" />
-                    <figcaption class="p-3 small text-white-50">Anatomía del bambú.</figcaption>
+                    <figcaption class="p-3 small text-white-50">Anatomía del bambú. Extraido de Bamboo scaffolding in
+                        Hong Kong. (Duhalde M. , Sanjinez V. & Wong D. , 2022)</figcaption>
                 </figure>
             </div>
             <!--segunda imagen-->
             <div class="col-12 col-sm-6">
                 <figure class="shadow bg-black">
                     <img loading="lazy" src="img/fig-2.png" class="w-100" alt="describe lo que se ve en la imagen" />
-                    <figcaption class="p-3 small text-white-50">Características del bambú.</figcaption>
+                    <figcaption class="p-3 small text-white-50">Características del bambú. Extraido de Bamboo
+                        scaffolding in Hong Kong. (Duhalde M. , Sanjinez V. & Wong D. , 2022)</figcaption>
                 </figure>
             </div>
             <!--tercera imagen-->
             <div class="col-12 col-sm-6">
                 <figure class="shadow bg-black">
                     <img loading="lazy" src="img/fig-3.png" class="w-100" alt="describe lo que se ve en la imagen" />
-                    <figcaption class="p-3 small text-white-50">Trabajadores en andamios de bambú.</figcaption>
+                    <figcaption class="p-3 small text-white-50">Trabajadores en andamios de bambú. Extraido de Bamboo
+                        scaffolding in Hong Kong. (Duhalde M. , Sanjinez V. & Wong D. , 2022)</figcaption>
                 </figure>
             </div>
             <!--cuarta imagen-->
@@ -89,7 +92,8 @@
                 <figure class="shadow bg-black">
                     <img loading="lazy" src="img/fig-4.png" class="w-100" alt="describe lo que se ve en la imagen" />
                     <figcaption class="p-3 small text-white-50">Comparativa de los andamios de bambú antiguos y
-                        actuales.</figcaption>
+                        actuales. Extraido de Bamboo scaffolding in Hong Kong. (Duhalde M. , Sanjinez V. & Wong D. ,
+                        2022)</figcaption>
                 </figure>
             </div>
             <!--no hay más imágenes-->
@@ -106,7 +110,8 @@
             <div class="col-12 col-sm-6">
                 <figure class="shadow bg-black">
                     <img loading="lazy" src="img/mixto-1.png" class="w-100" alt="describe lo que se ve en la imagen" />
-                    <figcaption class="p-3 small text-white-50">Características del Corgi galés de Pembroke.
+                    <figcaption class="p-3 small text-white-50">Características del Corgi galés de Pembroke. Extraido de
+                        A dogs life (Marcelo Duhalde, 2017)
                     </figcaption>
                 </figure>
             </div>
@@ -115,7 +120,7 @@
                 <figure class="shadow bg-black">
                     <img loading="lazy" src="img/mixto-2.png" class="w-100" alt="describe lo que se ve en la imagen" />
                     <figcaption class="p-3 small text-white-50">Índice de sobrevivientes y fallecidos luego del
-                        hundimiento del Titanic.</figcaption>
+                        hundimiento del Titanic. Extraido de Sinking the "unsinkable" (Adolfo Arranz, 2012)</figcaption>
                 </figure>
             </div>
             <!--no hay más imágenes-->
